--- a/catalogoInput/capitulos.in
+++ b/catalogoInput/capitulos.in
@@ -1,6 +1,6 @@
 1;Fundamentos;Basico
 2;Operadores y Sentencias;Basico
-3;Java APIs;Basico
+3;Core Java APIs;Basico
 4;Metodos y Encapsulamiento;Intermedio
 5;Diseño de Clase;Intermedio
 6;Excepciones;Avanzado
