--- a/catalogoInput/conceptos.in
+++ b/catalogoInput/conceptos.in
@@ -2,7 +2,7 @@
 1;2;Metodos;Los metodos son bloques de codigo que se pueden llamar para evitar reutilizar codigo.
 1;3;Comentarios;Es texto dentro del codigo que no se ejecuta. Sirve para aclarar funcionamiento del mismo.
 1;4;Clases;Las clases son planos de construccion. Todos los nombres de las clases deben ser con mayuscula.\n Cuando definimos una clase, se describen todas las caracteristicas de esta.\n Para darle uso a una clase se tiene que crear/instanciar un objeto.\n Las clases tienen dos elementos importantes que la definen: los atributos y los metodos o funciones.
-1;5;Metodo Main; Una aplicaci√≥n de Java est√° definida como una clase la cual contiene el m√©todo main. El m√©todo main tiene la funci√≥n especial de ser el punto de arranque de un programa y es lo que diferencia una clase com√∫n y corriente de una aplicaci√≥n
+1;5;Metodo Main; Una aplicacion de Java esta° definida como una clase la cual contiene el metodo main. El metodo main tiene la funcion especial de ser el punto de arranque de un programa y es lo que diferencia una clase comun y corriente de una aplicacion
 1;6;Comodines (Wildcards);El asterisco (*) es un wildcard (comodÌn) que se usa como atajo para importar todas las clases de un paquete.
 1;7;Importaciones redundantes (Redundant imports); Una declaraciÛn de importaciÛn es considerada redundante cuando: _Una clase es importada mas de una vez. _La clase importada pertenece al paquete java.lang. _La clase importada es del mismo paquete que el paquete actual.
 1;8;Conflicto de nombres (Naming conflicts); Se genera un conflicto de nombres cuando se importan clases con el mismo nombre pero de diferentes paquetes. A la hora de usarlas es necesario romper con la ambiguedad que se crea al tener el mismo identificador usando su nombre completo.
