--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -1,1 +1,1 @@
-1,6,1,Con cuál de los siguientes caracteres puedo importar todas las clases de un paquete?,3,1) \n,2) *,3) (),2
+1X6X1XCon cuál de los siguientes caracteres puedo importar todas las clases de un paquete?X3X1) \nX2) *X3) ()X2
