--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -4,3 +4,5 @@
 2,1,4,A que tipo de operador corresponde la siguiente expresión: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
 2,2,5,Cuál de los siguientes ejemplos es un operador aritmético?,3,1) /,2) ;,3) 0,1
 2,3,6,Qué tipo de dato será x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
+3,8,7,¿Qué método usarías para convertir todos los caracteres en minúscula?,3,1) .toLowerCamelCase(),2) .toLowerCase(), 3) .toCaseLower(), 2
+3,9,8, ¿Cómo se vería el código si se usa .toUpperCase() en "hola mundo"?, 3, 1) "HOLA MUNDO", 2) "Hola mundo", 3) "Hola Mundo",1
