--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -1,8 +1,10 @@
-1,6,1,Con cuál de los siguientes caracteres puedo importar todas las clases de un paquete?,3,1) \n,2) *,3) (),2
-1,7,2,Cuál de los siguientes ejemplos es considerado una declaración de importación redundante?,3,1) import java.util.Date;,2) import java.lang.System;,3) import java.util.Scanner;,2
+1,6,1,Con cuï¿½l de los siguientes caracteres puedo importar todas las clases de un paquete?,3,1) \n,2) *,3) (),2
+1,7,2,Cuï¿½l de los siguientes ejemplos es considerado una declaraciï¿½n de importaciï¿½n redundante?,3,1) import java.util.Date;,2) import java.lang.System;,3) import java.util.Scanner;,2
 1,9,3,Que palabra clave se utiliza para generar paquetes en java?,3,1) Package,2) Packages,3) Ambas son correctas,1
-2,1,4,A que tipo de operador corresponde la siguiente expresión: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
-2,2,5,Cuál de los siguientes ejemplos es un operador aritmético?,3,1) /,2) ;,3) 0,1
-2,3,6,Qué tipo de dato será x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
-3,8,7,¿Qué método usarías para convertir todos los caracteres en minúscula?,3,1) .toLowerCamelCase(),2) .toLowerCase(), 3) .toCaseLower(), 2
-3,9,8, ¿Cómo se vería el código si se usa .toUpperCase() en "hola mundo"?, 3, 1) "HOLA MUNDO", 2) "Hola mundo", 3) "Hola Mundo",1
+2,1,4,A que tipo de operador corresponde la siguiente expresiï¿½n: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
+2,2,5,Cuï¿½l de los siguientes ejemplos es un operador aritmï¿½tico?,3,1) /,2) ;,3) 0,1
+2,3,6,Quï¿½ tipo de dato serï¿½ x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
+3,8,7,ï¿½Quï¿½ mï¿½todo usarï¿½as para convertir todos los caracteres en minï¿½scula?,3,1) .toLowerCamelCase(),2) .toLowerCase(), 3) .toCaseLower(), 2
+3,9,8, ï¿½Cï¿½mo se verï¿½a el cï¿½digo si se usa .toUpperCase() en "hola mundo"?, 3, 1) "HOLA MUNDO", 2) "Hola mundo", 3) "Hola Mundo",1
+3,10,9,Â¿QuÃ© valor devuelve el mÃ©todo equals()?,3,1) Boolean, 2) int, 3) String,1
+3,11,10,Â¿CuÃ¡l es el retorno: "abc".equalsIgnoreCase("ABC")?,3, 1) True, 2) False, 3) ABC,1
