--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -4,3 +4,5 @@
 2,1,4,A que tipo de operador corresponde la siguiente expresión: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
 2,2,5,Cuál de los siguientes ejemplos es un operador aritmético?,3,1) /,2) ;,3) 0,1
 2,3,6,Qué tipo de dato será x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
+3,6,1,Según la siguiente cadena: \nString cadena="Estoy segura que Spiderman va a ser una gran película"; \n¿Qué valor va a retornar el siguiente método cadena.indexOf("e",5)?,3,1) 15,2) 7, 3) 0,2
+3,7,2,Si ejecuto el siguiente método que valor se va a visualizar por pantalla. \nString cadena = "Electroencefalografista";\nSystem.out.println(cadena.substring(0, 7));,3,1) "Electro",2)"Electroe",3)"encefalografista",1
