--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -4,3 +4,5 @@
 2,1,4,A que tipo de operador corresponde la siguiente expresión: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
 2,2,5,Cuál de los siguientes ejemplos es un operador aritmtico?,3,1) /,2) ;,3) 0,1
 2,3,6,Qué tipo de dato será x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
+5,1,1,todas las clases heredan de…,3,1)clase hija,2)clase padre,3) clase Object,3
+5,2,1,Es correcta? public class Animal extends Lion{\n private void roar() {\nSystem.out.println("The "+getAge()+" year old lion says: Roar!");\n}\n},2,1)F,2)V,1
