--- a/catalogoInput/preguntas.in
+++ b/catalogoInput/preguntas.in
@@ -6,5 +6,7 @@
 2,1,4,A que tipo de operador corresponde la siguiente expresión: int x= 2*(32-8)?,3, 1) Operador ternario,2) Operador binario,3) Operador unario,2
 2,2,5,Cuál de los siguientes ejemplos es un operador aritmtico?,3,1) /,2) ;,3) 0,1
 2,3,6,Qué tipo de dato será x*y? int x=1; long y=33;,3,1) int,2) long,3) double,2
+3,14,1,Que tipo de parámetros usa la siguiente sentencia? String myString = "__x___x___x_x____xx_";\n char oldChar = 'x';\n char newChar = 'o';\n String newString = myString.replace(oldChar, newChar);// __o___o___o_o____oo_;,3,1)String ,2)char ,3)Ambas son correctas ,2
+3,15,1,Para que se utiliza el método trim() en Java?,3,1)Eliminar espacios en blanco en ambos extremos de la cadena,2)Reemplazar espacios de la cadena,3)Eliminar espacios y caracteres especiales dentro de la cadena,1
 5,1,1,todas las clases heredan de…,3,1)clase hija,2)clase padre,3) clase Object,3
 5,2,1,Es correcta? public class Animal extends Lion{\n private void roar() {\nSystem.out.println("The "+getAge()+" year old lion says: Roar!");\n}\n},2,1)F,2)V,1
